fix nav shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 420;
-  font-display: swap;
+  font-display: block;
   src: url("../fonts/Inter-Regular.woff2") format("woff2");
 }
 
